releases/platform/v0.5.1/README.md
# B-UH platform 0.5.1

Source commit: `b97faf3093b7b961d93888e03ee35803b7ae9cbe`

## Changes

- **platform (fix):** Make release readiness and deployment results publish reliably to pull requests.

## Artifacts

- `aa_buh_mining_analytics-0.2.1-py3-none-any.whl` — 241807bed3805f363c0a84352de82278d16bed98f6562953feaae6784ee2a240 (reused)
- `aa_buh_moon_tax-0.3.3-py3-none-any.whl` — a50cf827c5c9fd979d8f287efc7d13eb8f1284a53f92c4e5f8c88528693bdbd9 (reused)
- `aa_buh_structure_ops-0.3.1-py3-none-any.whl` — bd83e39f10b04fce9b90eb6c9bd06430ca7938db74cc93c4155042bcd40bb212 (reused)
- `aa_moonmining-3.1.0.post1-py3-none-any.whl` — aa4ddbc7da64151cd6d988d971d59462360e35a5111d47a3bf56d577f454bc13 (reused)
- `aa_structures-4.0.3-py3-none-any.whl` — ba8493ef10a450198fa5ba3d8995e1ea661b74dca20d770beaa91bf005f558e3 (reused)
